--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <title>Survey Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<nav>
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="aboutus.html">ABOUT US</a></li>
+        <li><a href="services.html">SERVICES</a></li>
+        <li><a href="contactus.html">CONTACT US</a></li>
+        
+    </ul>
+</nav>
 <body>
     <h1>CYNE CYBER</h1>
+
     <form action="">
     <div class="form-group">
         <label for="name">Name</label>
@@ -22,7 +32,7 @@
         <input type="number" contact="number" id="contact" class="formControl" placeholder="07..." required >
     </div>
     <div id="question1">
-        <h2>What would you like us to improve?</h2>
+        <h4>What would you like us to improve?</h4>
         <input type="checkbox" name="DLA" value="Driving licence Application">Driving License Application
         <br>
         <input type="checkbox" name="tax" value="KRA">KRA
@@ -34,7 +44,7 @@
     </div>
 
     <div id="question1">
-        <h2>How did you get to know about us?</h2>
+        <h4>How did you get to know about us?</h4>
         <input type="radio" name="friends" value="friends">Friends
         <br>
         <input type="radio" name="SM" value="Social media">Social Media
